# gausspyplus

./: .gitignore  .pre-commit-config.yaml  .rtd-environment.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  FAQ.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
data/: grs-test_field_10x10.fits  grs-test_field_3x3.fits  grs-test_field_5x5.fits
docs/: CHANGES.md  FAQ.md  Makefile  conf.py  index.rst
docs/gausspyplus/: index.rst
docs/source/: conf.py  gausspyplus.extern.rst  gausspyplus.gausspy_py3.rst  gausspyplus.rst  gausspyplus.tests.rst  gausspyplus.utils.rst  getting_started.rst  index.rst  installation.rst  (+1 more)
example/: Tutorial_decompose_single_spectrum.ipynb  Tutorial_example-GRS.ipynb  Tutorial_helper_functions.ipynb  decompose--grs.py  example_fits_first_component--grs.py  example_fits_first_component.py  finalize--grs.py  prepare--grs.py  spatial_refitting-p1--grs.py  spatial_refitting-p2--grs.py  step_1-training_set--grs.py  step_2-train--grs.py  step_3-prepare--grs.py  step_4-decompose--grs.py  step_5-spatial_refitting-p1--grs.py  step_6-spatial_refitting-p2--grs.py  step_7-finalize--grs.py  train--grs.py  training_set--grs.py
gausspyplus/: __init__.py  config_file.py  decompose.py  definitions.py  finalize.py  miscellaneous_functions.py  model.py  moment_masking.py  output.py  parallel_processing.py  plotting.py  prepare.py  shared_functions.py  spatial_fitting.py  spectral_cube_functions.py  spectrum.py  training.py  training_set.py
licenses/: LICENSE.rst
tests/: integration_test.py  test_determine_intervals.py  test_noise_estimation.py  test_spatial_fitting_phase_1.py  test_training_set.py  test_utils_grouping_functions.py  test_workflow.py
tutorials/: Tutorial_decompose_single_spectrum.ipynb  Tutorial_example-GRS.ipynb  example_fits_first_component--grs.py  step_1-training_set--grs.py  step_2-train--grs.py  step_3-prepare--grs.py  step_4-decompose--grs.py  step_5-spatial_refitting-p1--grs.py  step_6-spatial_refitting-p2--grs.py  step_7-finalize--grs.py
(+58 files in other folders)
